--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pwainreact",
-  "homepage": "https://anereeShah.github.io.pwaInReact",
+  "homepage": "https://anereeshah.github.io.pwaInReact",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
